--- a/src/app/layout/admin/admin.component.html
+++ b/src/app/layout/admin/admin.component.html
@@ -178,10 +178,10 @@
             <tbody>
               <tr *ngFor="let customer of customers |filterCus:searchcustomer">
                 <td>{{ customer.id }}</td>
-                <td>{{ customer.userName }}</td>
+                <td>{{ customer.username }}</td>
                 <td>{{ customer.nic }}</td>
                 <td>{{ customer.email }}</td>
-                <td>{{ customer.phoneNumber }}</td>
+                <td>{{ customer.phonenumber }}</td>
               </tr>
             </tbody>
           </table>
