--- a/src/app/layout/admin/admin.component.html
+++ b/src/app/layout/admin/admin.component.html
@@ -178,10 +178,10 @@
             <tbody>
               <tr *ngFor="let customer of customers |filterCus:searchcustomer">
                 <td>{{ customer.id }}</td>
-                <td>{{ customer.username }}</td>
+                <td>{{ customer.userName }}</td>
                 <td>{{ customer.nic }}</td>
                 <td>{{ customer.email }}</td>
-                <td>{{ customer.phonenumber }}</td>
+                <td>{{ customer.phoneNumber }}</td>
               </tr>
             </tbody>
           </table>
@@ -203,7 +203,7 @@
               </div>
           </div>
   
-          <!-- Square 2: Number of Rentals -->
+          <!-- Square 2: Number of Dvds -->
           <div class="col-4">
               <div class="card text-center text-white bg-success shadow-lg p-4">
                   <h5>Number of displayDVD</h5>
@@ -211,11 +211,11 @@
               </div>
           </div>
   
-          <!-- Square 3: Number of Overdue -->
+          <!-- Square 3: Number of Rentals -->
           <div class="col-4">
               <div class="card text-center text-white bg-danger shadow-lg p-4">
-                  <h5>Number of Overdue</h5>
-                  <p class="display-4">10</p>
+                  <h5>Number of Rentals</h5>
+                  <p class="display-4">{{rentals.length}}</p>
               </div>
           </div>
   
@@ -244,16 +244,17 @@
           </div>
       </div>
   </div>  
+
+
   <section class="container mt-5 rental-container" *ngIf="showrental">
     <div class="row">
       <!-- Header Section -->
       <div class="col-md-6">
         <h1 style="color: rgb(4, 4, 43);">Rental Details</h1>
       </div>
+  <!-- Search Box Section -->
 
 
-
-      <!-- Search Box Section -->
       <div class="col-md-6 text-right">
         <input 
           type="text" 
@@ -262,30 +263,49 @@
         />
       </div>
     </div>
-  
-    <!-- Table Section -->
-    <div class="row">
-      <div class="col-12">
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered table-hover">
-            <thead class="thead-dark">
-              <tr>
-                <th>User Name</th>
-                <th>DVD Title</th>
-                <th>Rental Date</th>
-                <th>Return Date</th>
-                <th>Status</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <!-- Rental details will be dynamically added here -->
-            </tbody>
-          </table>
+      
+      <!-- Table Section -->
+      <div class="row">
+        <div class="col-12">
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover">
+              <thead class="thead-dark">
+                <tr>
+                  <th>User Name</th>
+                  <th>DVD Title</th>
+                  <th>Rental Date</th>
+                  <th>Return Date</th>
+                  <th>Status</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let rental of rentals | pendingFil : 'pending'  ">
+                  <td>{{ rental.customer?.userName}}</td>
+                  <td>{{ rental.dvd?.title}}</td>
+                  <td>{{ rental.rentalDate | date: 'short' }}</td>
+                  <td>{{ rental.returnDate ? (rental.returnDate | date: 'short') : 'N/A' }}</td>
+                  <td class="text-warning">{{ rental.status }}</td>
+                  <td>
+                    <button 
+                      class="btn btn-sm btn-primary" 
+                      (click)="takeAction(rental)"
+                    >
+                      Take Action
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-    </div>
   </section>
+
+
+
+
+
   
 
 
