--- a/src/app/layout/admin/admin.component.css
+++ b/src/app/layout/admin/admin.component.css
@@ -15,4 +15,17 @@
         background-color: rgb(160, 77, 25);
     }
     
+
+    .btn-success:hover {
+        background-color: #28a745;
+        border-color: #218838;
+        color: white;
+      }
+      
+      .btn-danger:hover {
+        background-color: #dc3545;
+        border-color: #c82333;
+        color: white;
+      }
+      
     
