--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -2,7 +2,8 @@
     <header class="header mt-1">
         <button type="button" [routerLink]="['/login']" class="btn btn-signin mt-2"
             style="position: relative; top: 40px; margin-left:1300px;">Sign
-            In</button>      <a [routerLink]="['/admin']">admin</a><br>
+            In</button>    
+            
             
         <h1 class="display-1 text-center text-red mt-0  " style="margin-right: 1100px;margin-top: 2px;">CineFlix</h1>
     </header>
