--- a/src/app/layout/admin/admin.component.html
+++ b/src/app/layout/admin/admin.component.html
@@ -16,7 +16,7 @@
     </a>
     <div>
       <button type="button" class="btn m-3"><i class="bi bi-bell-fill"></i></button>
-      <button id="btn" class="btn btn-outline-light" type="submit" [routerLink]="['']">LogOut</button>
+      <button id="btn" class="btn btn-outline-light" type="submit" [routerLink]="['/']">LogOut</button>
     </div>
     
   </div>
@@ -78,6 +78,7 @@
   </div>
 
   <div class="b-example-divider b-example-vr" style="height: 900px"></div>
+  
   <div style="width: 80%" class="shadow p-4 m-1 rounded">
 
     <!-- Section Form ahow the dvd data to admin like an inventory -->
