update dvd sucess

--- a/src/app/layout/admin/admin.component.html
+++ b/src/app/layout/admin/admin.component.html
@@ -355,7 +355,7 @@
 </section>
 
 
-
+<router-outlet></router-outlet>
 
 
   
@@ -442,6 +442,9 @@
           </form>
         </div>
       </div>
+
     </div>
+
+
   </div>
 </main>
