--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -41,7 +41,7 @@ data-bs-toggle="modal"
 data-bs-target="#profileModal"
 (click)="fetchCustomerDetails()"
 >
-View Profile
+ Profile
 </button>
       
       <button type="button" class="btn m-3">
@@ -51,7 +51,7 @@ View Profile
         id="btn"
         class="btn btn-outline-light"
         type="submit"
-        [routerLink]="['/']"
+        (click)="logout()"
       >
         LogOut
       </button>
@@ -315,105 +315,124 @@ View Profile
     <!-- This is for showing Customer details for admin like custoomer report -->
   </div>
 
-
-
 <!-- Profile Modal -->
 <div
-class="modal fade"
-id="profileModal"
-tabindex="-1"
-aria-labelledby="profileModalLabel"
-aria-hidden="true"
+  class="modal fade"
+  id="profileModal"
+  tabindex="-1"
+  aria-labelledby="profileModalLabel"
+  aria-hidden="true"
 >
-<div class="modal-dialog modal-lg">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="profileModalLabel">
-      </h5>
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="modal"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="modal-body">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="profileModalLabel">Edit Profile</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <!-- Form Section -->
+          <div class="col-md-6">
+            <form [formGroup]="editProfile" (ngSubmit)="onSubmit()">
+              <div class="form-group mb-3">
+                <label for="id" class="form-label">Customer-Id:</label>
+                <input
+                  type="text"
+                  id="id"
+                  class="form-control"
+                  formControlName="id"
+                />
+              </div>
 
-      <form [formGroup]="editProfile" (ngSubmit)="onSubmit()">
-        <div class="form-group mb-3">
-          <label for="id" class="form-label">Customer-Id:</label>
-          <input
-            type="text"
-            id="id"
-            class="form-control"
-            formControlName="id"
-          />
+              <div class="form-group mb-3">
+                <label for="username" class="form-label">Username: </label>
+                <input
+                  type="text"
+                  id="username"
+                  class="form-control"
+                  formControlName="userName"
+                  placeholder="Enter username"
+                />
+              </div>
+
+              <div class="form-group mb-3">
+                <label for="email" class="form-label">Email: </label>
+                <input
+                  type="email"
+                  id="email"
+                  class="form-control"
+                  formControlName="email"
+                  placeholder="Enter email"
+                />
+              </div>
+
+              <div class="form-group mb-3">
+                <label for="phonenumber" class="form-label">Phone Number: </label>
+                <input
+                  type="text"
+                  id="phonenumber"
+                  class="form-control"
+                  formControlName="phoneNumber"
+                  placeholder="Enter phone number"
+                />
+              </div>
+
+              <div class="form-group mb-3">
+                <label for="nic" class="form-label">NIC: </label>
+                <input
+                  type="text"
+                  id="nic"
+                  class="form-control"
+                  formControlName="nic"
+                  placeholder="Enter NIC"
+                />
+              </div>
+
+              <button
+                type="submit"
+                class="btn btn-primary w-100"
+                [disabled]="editProfile.invalid"
+              >
+                Update Profile
+              </button>
+            </form>
+          </div>
+
+          <!-- Image Section -->
+          <div class="col-md-6 text-center">
+            <!-- Align content using flexbox -->
+            <div class="d-flex flex-column align-items-center">
+              <!-- Title -->
+              <h1 class="mb-3">Profile</h1>
+              <!-- Image -->
+              <img
+                src="../../../th.jpeg"
+                alt="Profile Image"
+                class="img-fluid rounded mb-3"
+                style="max-height: 150px; width: auto;"
+              />
+              <!-- Modal Trigger Button -->
+              <button
+                class="btn btn-primary m-1"
+                data-bs-toggle="modal"
+                data-bs-target="#rentalHistoryModal"
+                (click)="rentalhistory()"
+              >
+                <i class="bi bi-graph-up-arrow"></i> Rentals History
+              </button>
+            </div>
+          </div>
         </div>
-        
-
-        <div class="form-group mb-3">
-          <label for="username" class="form-label">Username: </label>
-          <input
-            type="text"
-            id="username"
-            class="form-control"
-            formControlName="userName"
-            placeholder="Enter username"
-          />
-        </div>
-
-        <div class="form-group mb-3">
-          <label for="email" class="form-label">Email: </label>
-          <input
-            type="email"
-            id="email"
-            class="form-control"
-            formControlName="email"
-            placeholder="Enter email"
-          />
-        </div>
-
-        <div class="form-group mb-3">
-          <label for="phonenumber" class="form-label">Phone Number: </label>
-          <input
-            type="text"
-            id="phonenumber"
-            class="form-control"
-            formControlName="phoneNumber"
-            placeholder="Enter phone number"
-          />
-        </div>
-
-        <div class="form-group mb-3">
-          <label for="nic" class="form-label">NIC: </label>
-          <input
-            type="text"
-            id="nic"
-            class="form-control"
-            formControlName="nic"
-            placeholder="Enter NIC"
-          />
-        </div>
-
-        <!-- <button
-          type="submit"
-          class="btn btn-primary w-100"
-          [disabled]="editProfile.invalid"
-        >
-          Update Profile
-        </button> -->
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button
-        type="button"
-        class="btn btn-secondary"
-        data-bs-dismiss="modal"
-      >
-        Close
-      </button>
+      </div>
     </div>
   </div>
 </div>
-</div>
+
+
+
 </main>
