--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid hero-section">
     <header class="header mt-1">
         <button type="button" [routerLink]="['/login']" class="btn btn-signin mt-2"
-            style="position: relative; top: 40px; margin-left:1300px;">Sign
+            style="position: relative; top: 40px; margin-left:1600px;">Sign
             In</button>    
             
             
@@ -47,7 +47,7 @@
 
 <hr style="color: red;margin: 0.02rem;width: 0.02rem;border-radius: 500px;">
 
-<div class="div-img" style="background: radial-gradient(circle, rgb(10, 2, 49) 30%, black 90%);">
+<div class="div-img" style="background: radial-gradient(circle, rgb(10, 2, 49) 30%, black 90%); ">
 
 
 
@@ -77,7 +77,10 @@
             <img src="Kanguva.jpg" alt="Image 3">
 
         </div>
+        <div class="image-card">
+            <img src="LuckyBaskhar.jpg" alt="Image 3">
 
+        </div>
 
     </div>
 </div>
