--- a/src/app/customer/customer.component.css
+++ b/src/app/customer/customer.component.css
@@ -1,7 +1,7 @@
 
 
 .btn:hover{
-  background-color:rgb(17, 215, 245);
+  background-color:rgb(241, 21, 175);
   color: black;
   }
   
@@ -359,6 +359,8 @@ h1 {
   padding: 20px;
   background-color: #f4f4f4; /* Light background for the section */
   justify-content: center;
+  width: 1700px;
+  margin-left: 100px;
 }
 
 /* Card Style */
