--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -212,6 +212,10 @@
                   >
                     <i class="bi bi-graph-up-arrow"></i> Rentals History
                   </button>
+                  <!-- Trigger Button -->
+<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#favoritesModal">
+  View Favorites ❤️
+</button>
                 </div>
               </div>
             </div>
@@ -220,6 +224,9 @@
       </div>
     </div>
     
+
+
+
 
 
 
