favourite full done

--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -87,6 +87,7 @@
                 <th scope="col">Director</th>
                 <th scope="col">Price</th>
                 <th scope="col">Genre</th>
+                <th scope="col">Action</th>
               </tr>
             </thead>
             <tbody>
